--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ section
 section .row {
     position: relative;
     top: -50%;
+    right: 20px;
     width: 100%;
     display: flex;
     padding: 10px 0;
